@@ -16,13 +16,11 @@
  */
 package org.apache.solr.cli;
 
-import java.io.PrintStream;
 import java.lang.invoke.MethodHandles;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.List;
 import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.Option;
+import org.apache.commons.cli.Options;
 import org.apache.solr.common.cloud.SolrZkClient;
 import org.apache.solr.common.cloud.ZkMaintenanceUtils;
 import org.apache.solr.core.ConfigSetService;
@@ -34,36 +32,35 @@ import org.slf4j.LoggerFactory;
 public class ConfigSetUploadTool extends ToolBase {
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
-  public ConfigSetUploadTool() {
-    this(CLIO.getOutStream());
-  }
+  private static final Option CONF_NAME_OPTION =
+      Option.builder("n")
+          .longOpt("conf-name")
+          .hasArg()
+          .argName("NAME")
+          .required()
+          .desc("Configset name in ZooKeeper.")
+          .build();
 
-  public ConfigSetUploadTool(PrintStream stdout) {
-    super(stdout);
+  private static final Option CONF_DIR_OPTION =
+      Option.builder("d")
+          .longOpt("conf-dir")
+          .hasArg()
+          .argName("DIR")
+          .required()
+          .desc("Local directory with configs.")
+          .build();
+
+  public ConfigSetUploadTool(ToolRuntime runtime) {
+    super(runtime);
   }
 
   @Override
-  public List<Option> getOptions() {
-    return List.of(
-        Option.builder("n")
-            .longOpt("conf-name")
-            .hasArg()
-            .argName("NAME")
-            .required(true)
-            .desc("Configset name in ZooKeeper.")
-            .build(),
-        Option.builder("d")
-            .longOpt("conf-dir")
-            .hasArg()
-            .argName("DIR")
-            .required(true)
-            .desc("Local directory with configs.")
-            .build(),
-        SolrCLI.OPTION_SOLRURL,
-        SolrCLI.OPTION_SOLRURL_DEPRECATED,
-        SolrCLI.OPTION_ZKHOST,
-        SolrCLI.OPTION_ZKHOST_DEPRECATED,
-        SolrCLI.OPTION_CREDENTIALS);
+  public Options getOptions() {
+    return super.getOptions()
+        .addOption(CONF_NAME_OPTION)
+        .addOption(CONF_DIR_OPTION)
+        .addOption(CommonCLIOptions.CREDENTIALS_OPTION)
+        .addOptionGroup(getConnectionOptions());
   }
 
   @Override
@@ -72,27 +69,30 @@ public class ConfigSetUploadTool extends ToolBase {
   }
 
   @Override
+  public String getUsage() {
+    return "bin/solr zk upconfig [-d <DIR>] [-n <NAME>] [-s <HOST>] [-u <credentials>] [-z <HOST>]";
+  }
+
+  @Override
   public void runImpl(CommandLine cli) throws Exception {
-    SolrCLI.raiseLogLevelUnlessVerbose(cli);
-    String zkHost = SolrCLI.getZkHost(cli);
+    String zkHost = CLIUtils.getZkHost(cli);
 
     final String solrInstallDir = System.getProperty("solr.install.dir");
-    Path solrInstallDirPath = Paths.get(solrInstallDir);
+    Path solrInstallDirPath = Path.of(solrInstallDir);
 
-    String confName = cli.getOptionValue("conf-name");
-    try (SolrZkClient zkClient = SolrCLI.getSolrZkClient(cli, zkHost)) {
-      echoIfVerbose("\nConnecting to ZooKeeper at " + zkHost + " ...", cli);
+    String confName = cli.getOptionValue(CONF_NAME_OPTION);
+    String confDir = cli.getOptionValue(CONF_DIR_OPTION);
 
-      final Path configsetsDirPath = SolrCLI.getConfigSetsDir(solrInstallDirPath);
-      Path confPath =
-          ConfigSetService.getConfigsetPath(
-              cli.getOptionValue("conf-dir"), configsetsDirPath.toString());
+    echoIfVerbose("\nConnecting to ZooKeeper at " + zkHost + " ...");
+    try (SolrZkClient zkClient = CLIUtils.getSolrZkClient(cli, zkHost)) {
+      final Path configsetsDirPath = CLIUtils.getConfigSetsDir(solrInstallDirPath);
+      Path confPath = ConfigSetService.getConfigsetPath(confDir, configsetsDirPath.toString());
 
       echo(
           "Uploading "
               + confPath.toAbsolutePath()
               + " for config "
-              + cli.getOptionValue("conf-name")
+              + confName
               + " to ZooKeeper at "
               + zkHost);
       FileTypeMagicUtil.assertConfigSetFolderLegal(confPath);
